<resources>
    <string name="app_name">KASIRAN</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="kasiranlogo">KASIRAN</string>
    <string name="email_address">Email</string>
    <string name="type_your_email_address">Masukan Email</string>
    <string name="masukan_password">Masukan Password</string>
    <string name="login">Masuk</string>
    <string name="nama_menu">Pizza Hot</string>
    <string name="harga_menu"> IDR 20000</string>
    <string name="stok_menu">0</string>
    <string name="kategori_menu">Minuman</string>
    <string name="submit">Tambah</string>
    <string name="mytitle">Keluar</string>
    <string name="share">keluar</string>
    <string name="lengkapi_data_dibawah_ini">Nama Menu</string>
    <string name="type">daily_stok</string>
    <string name="stok_tersedia_8">dailystok</string>
    <string name="deskripsi">Makanan khas Bandung yang cukup sering dipesan oleh anak muda dengan pola makan yang cukup tinggi dengan mengutamakan diet yang sehat dan teratur.</string>
    <string name="nama">Nama</string>
    <string name="add_item_description">add</string>
<<<<<<< HEAD
    <string name="diskoncode">COBA-DISKON-BARU</string>
    <string name="nominaldiskon">120000.00</string>
    <string name="leveldiskon">branch</string>
    <string name="deskripsidiskon">Diskon :</string>
    <string name="masukan_nama">Masukan Nama</string>
    <string name="harga">Harga</string>
    <string name="masukan_harga">Masukan Harga</string>
=======
    <string name="masukkan_harga">Masukan Harga</string>
    <string name="harga">Harga</string>
    <string name="masukan_nama">Masukan Nama</string>
>>>>>>> 5ba0d499fe8d743f0239f0de3310a1bd9805bd96
    <string name="stok">Stok</string>
    <string name="masukan_stok">Masukan Stok</string>
    <string name="tipe">Tipe</string>
    <string name="masukan_tipe">Masukan Tipe</string>
    <string name="deksripsi">Deksripsi</string>
    <string name="masukan_deksripsi">Masukan Deksripsi</string>
    <string name="tambah">Tambah</string>
<<<<<<< HEAD
    <string name="batal">Batal</string>
    <string name="simpan">Simpan</string>
    <string name="masukkan_harga">masukan harga</string>
    <string name="image_menu">gambar menu</string>
    <string name="pending">pending</string>
    <string name="daftar">Belum punya akun? <b><u>Daftar di sini</u></b></string>
    <string name="metode_pembayaran">cash</string>
    <string name="total_diskon">IDR 20.000</string>
    <string name="hasil_order">IDR 130.000</string>
    <string name="hasil_order_note">Tambah Pedas</string>
    <string name="order_note">Order Note</string>
    <string name="tanggal">2024-01-07</string>
=======
    <string name="image_menu">Image Menu</string>
    <string name="simpan">Simpan</string>
    <string name="batal">Batal</string>
>>>>>>> 5ba0d499fe8d743f0239f0de3310a1bd9805bd96
    <string-array name="tipe_options">
        <item>unit_stock</item>
        <item>daily_stock</item>
    </string-array>
</resources>