<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.menu.MenuEditFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="135dp"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="6dp"
            android:paddingRight="24dp">

            <ImageView
                android:id="@+id/img_menu"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:contentDescription="@string/image_menu"
                android:src="@drawable/ic_picture_empty" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins"
                android:text="@string/nama" />

            <EditText
                android:id="@+id/edt_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/shape_rectangle_outline_8_020202"
                android:hint="@string/masukan_nama"
                android:inputType="text"
                android:padding="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins"
                android:text="@string/harga" />

            <EditText
                android:id="@+id/edt_harga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/shape_rectangle_outline_8_020202"
                android:hint="@string/masukkan_harga"
                android:inputType="number"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins"
                android:text="@string/stok" />

            <EditText

                android:id="@+id/edt_stok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/shape_rectangle_outline_8_020202"
                android:hint="@string/masukan_stok"
                android:inputType="number"
                android:padding="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins"
                android:text="@string/tipe"/>

            <Spinner
                android:id="@+id/spinner_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/shape_rectangle_outline_8_020202"
                android:hint="@string/masukan_tipe"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins"
                android:text="@string/deksripsi"/>

            <EditText
                android:id="@+id/edt_decs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/shape_rectangle_outline_8_020202"
                android:hint="@string/masukan_deksripsi"
                android:inputType="text"
                android:padding="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:weightSum="2"> <!-- Pastikan jumlah bobot sama dengan jumlah total bobot anak -->

                <Button
                    android:id="@+id/btn_simpan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/utama"
                    android:fontFamily="@font/poppins"
                    android:padding="8dp"
                    android:text="@string/simpan"
                    android:textAllCaps="false"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_batal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/red"
                    android:fontFamily="@font/poppins"
                    android:padding="8dp"
                    android:text="@string/batal"
                    android:textAllCaps="false"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    </androidx.core.widget.NestedScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/loadingIndicator"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"/>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>