<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.menu.MenuDetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_product_detail"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:src="@drawable/ic_launcher_background"
                android:scaleType="fitCenter"/>

            <TextView
                android:id="@+id/price_product_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/harga_menu"
                android:background="@drawable/bg_shape"
                android:textSize="20sp"
                android:layout_below="@id/img_product_detail"
                android:textColor="@color/white"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:padding="4dp"
                android:fontFamily="@font/poppins_semibold" />

            <TextView
                android:id="@+id/name_product_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/price_product_detail"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/lengkapi_data_dibawah_ini"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tulisanstok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Stok:"
                android:textSize="16sp"
                android:layout_below="@id/name_product_detail"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginStart="16dp"/>

            <TextView
                android:id="@+id/stokmenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_product_detail"
                android:layout_marginStart="4dp"
                android:layout_toEndOf="@+id/tulisanstok"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/stok_menu"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/menu_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stok_tersedia_8"
                android:textSize="16sp"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/name_product_detail"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/tipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_product_detail"
                android:layout_marginStart="4dp"
                android:layout_toStartOf="@+id/menu_type"
                android:fontFamily="@font/poppins_medium"
                android:text="Tipe:"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/desc_product"
                android:background="#14000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/menu_type"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/deskripsi" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>